--- a/backend/assets/css/style.css
+++ b/backend/assets/css/style.css
@@ -67,11 +67,11 @@ a {
 span:hover,
 a:hover {
     text-decoration: none;
-    color: #c5a47e;
+    color: #b57e10;
 }
 
 b {
-    color: #c5a47e;
+    color: #b57e10;
     font-weight: 400;
 }
 h1 {
@@ -110,7 +110,7 @@ h6 {
     text-transform: uppercase;
 }
 .small-title {
-    color: #c5a47e;
+    color: #b57e10;
     margin-bottom: 5px;
     font-size: 20px;
     text-transform: uppercase;
@@ -223,7 +223,7 @@ h6 {
 }
 .owl-theme .owl-dots .owl-dot.active span,
 .owl-theme .owl-dots .owl-dot:hover span {
-    background: #c5a47e;
+    background: #b57e10;
 }
 
 /* =======  Lines  ======= */
@@ -310,7 +310,7 @@ h6 {
     height: 7px;
     margin-bottom: 10px;
     border-radius: 50%;
-    background: #c5a47e;
+    background: #b57e10;
     position: absolute;
     top: 10px;
     right: 0;
@@ -395,7 +395,7 @@ h6 {
 .services .item h5 {
     font-size: 40px;
     margin-bottom: 20px;
-    color: #c5a47e;
+    color: #b57e10;
 }
 .services .item .numb {
     font-size: 75px;
@@ -449,7 +449,7 @@ h6 {
     content: '';
     width: 100%;
     height: 100%;
-    background-color: #c5a47e;
+    background-color: #b57e10;
     border-radius: 50%;
     position: absolute;
     top: 0;
@@ -465,7 +465,7 @@ h6 {
     line-height: 200px;
     font-weight: 400;
     font-family: 'Teko', sans-serif;
-    color: #c5a47e;
+    color: #b57e10;
     margin-bottom: 0;
 }
 
@@ -526,7 +526,7 @@ h6 {
     text-align: center;
 }
 .projects .item .con .category {
-    color: #c5a47e;
+    color: #b57e10;
     font-size: 20px;
     font-family: 'Teko', sans-serif;
     font-weight: 400;
@@ -565,14 +565,14 @@ h6 {
     padding: 11px 30px;
 }
 .projects .item .con .btn:hover {
-    border-color: #c5a47e;
+    border-color: #b57e10;
 }
 
 
 /* =======  Testimonials  ======= */
 .testimonials {
     padding: 60px 30px;
-    border: 8px solid #c5a47e;
+    border: 8px solid #b57e10;
     border-top: 0;
     margin-bottom: 0;
 }
@@ -586,7 +586,7 @@ h6 {
     content: '';
     width: calc(100% - 150px);
     height: 6px;
-    border: 4px solid #c5a47e;
+    border: 4px solid #b57e10;
     position: absolute;
     top: 0;
     left: 21px;
@@ -595,7 +595,7 @@ h6 {
     content: '';
     width: 30px;
     height: 6px;
-    border: 4px solid #c5a47e;
+    border: 4px solid #b57e10;
     position: absolute;
     top: 0;
     right: 21px;
@@ -615,7 +615,7 @@ h6 {
 }
 .testimonials .client-area h6 {
     font-size: 30px;
-    color: #c5a47e;
+    color: #b57e10;
     margin-bottom: 0px;
 }
 .testimonials .client-area span {
@@ -731,7 +731,7 @@ h6 {
     margin-bottom: 10px;
 }
 .blog .item .cont h6 a:hover {
-    color: #c5a47e;
+    color: #b57e10;
 }
 .blog .item .cont h5 {
     font-size: 40px;
@@ -750,7 +750,7 @@ h6 {
     margin-right: 0;
 }
 .blog .item .info b {
-    color: #c5a47e;
+    color: #b57e10;
     font-weight: 400;
     padding-right: 15px;
 }
@@ -776,13 +776,13 @@ h6 {
 .pagination-wrap li a:hover {
     opacity: 1;
     text-decoration: none;
-    background-color: #c5a47e;
-    border: 1px solid #c5a47e;
+    background-color: #b57e10;
+    border: 1px solid #b57e10;
     color: #fff;
 }
 .pagination-wrap li a.active {
-    background-color: #c5a47e;
-    border: 1px solid #c5a47e;
+    background-color: #b57e10;
+    border: 1px solid #b57e10;
     color: #fff;
 }
 /* blog and post sidebar */
@@ -802,7 +802,7 @@ h6 {
 .side-bar .widget ul li i {
     font-size: 10px;
     margin-right: 5px;
-    color: #c5a47e;
+    color: #b57e10;
 }
 .side-bar .widget .recent li {
     display: block;
@@ -854,7 +854,7 @@ h6 {
 .side-bar .tags li {
     margin: 2px !important;
     padding: 5px 15px;
-    border: 1px solid #c5a47e;
+    border: 1px solid #b57e10;
     color: #999 !important;
     float: left;
 }
@@ -906,14 +906,14 @@ h6 {
     margin-right: 10px;
 }
 .post .item .info b {
-    color: #c5a47e;
+    color: #b57e10;
     font-weight: 400;
 }
 .post .item .more {
     font-size: 15px;
     font-weight: 500;
     text-transform: uppercase;
-    color: #c5a47e;
+    color: #b57e10;
 }
 .post .item .more:hover i {
     opacity: 1;
@@ -931,7 +931,7 @@ h6 {
 .post .item .spical {
     margin: 15px;
     padding: 15px;
-    border-left: 4px solid #c5a47e;
+    border-left: 4px solid #b57e10;
     font-style: italic;
 }
 /* Post Comment */
@@ -946,7 +946,7 @@ h6 {
     content: '';
     width: 60px;
     height: 2px;
-    background: #c5a47e;
+    background: #b57e10;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -1003,7 +1003,7 @@ h6 {
 }
 .post .comments .cont .reply:hover,
 .post .add-comment .cont .reply:hover {
-    color: #c5a47e;
+    color: #b57e10;
 }
 
 
@@ -1053,7 +1053,7 @@ h6 {
 .contact .item h5 {
     font-size: 40px;
     margin-bottom: 20px;
-    color: #c5a47e;
+    color: #b57e10;
 }
 .contact .item .numb {
     font-size: 75px;
@@ -1078,13 +1078,13 @@ h6 {
 }
 .contact .contact-info .item .icon {
     font-size: 40px;
-    color: #c5a47e;
+    color: #b57e10;
 }
 .contact .contact-info .item .cont {
     margin-bottom: 0px
 }
 .contact .contact-info .item .cont p {
-    color: #c5a47e;
+    color: #b57e10;
     font-weight: 400;
     font-size: 15px;
     margin-bottom: 10px;
@@ -1121,7 +1121,8 @@ button, input, textarea {
 .btn {
     padding: 10px 25px;
     background: transparent;
-    background-color: #c5a47e;
+    /* background-color: #b57e10; */
+    background-color: #b57e10;
     position: relative;
     z-index: 3;
     -webkit-transition: all .4s;
@@ -1167,7 +1168,7 @@ footer p {
     font-weight: 400;
 }
 footer p a {
-    color: #c5a47e;
+    color: #b57e10;
 }
 
 
@@ -1426,7 +1427,7 @@ footer p a {
   #loader .loading {
     display: block;
     font-size: 0;
-    color: #c5a47e;
+    color: #b57e10;
     width: 40px;
     height: 40px; }
     #loader .loading > div {
